assets/css/post.css
body {
	padding-top: 0px;
}

.container[itemprop="articleBody"],
.post .post-excerpt p {
	font-family: "Merriweather","PT Serif",Georgia,"Times New Roman",serif;
	color: #333;
}

.container[itemprop="articleBody"] h1,
.container[itemprop="articleBody"] h2,
.container[itemprop="articleBody"] h3,
.container[itemprop="articleBody"] h4,
.container[itemprop="articleBody"] h5,
.container[itemprop="articleBody"] h6{
	font-family: "Lato","Helvetica Neue",Helvetica,sans-serif;
	line-height: 1.25;
	margin-top: 1em;
	margin-bottom: .5em;
	font-weight: 900;
}

/* .container[itemprop="articleBody"] ul{
	list-style: none;
}

.container[itemprop="articleBody"] ul{
	padding-left: 0px;
}

.container[itemprop="articleBody"] ul li::before{
	content: "\2022"; 
	color: #c1c2c1;
	font-weight: bold;
	display: inline-block;
	width: 1em;
	margin-left: -1em; 
} */

.container[itemprop="articleBody"] ul li p{
	display: inline;
}

.navbar-toggler,
.global-search {
	position: relative;
	top: 10px;
	color: #ccc;
	cursor: pointer;
}

.global-search {
	padding: .25rem .75rem;
	line-height: 1;
	font-size: 1.25rem;
	height: 2em;
	background-size: 24px 24px;
}

.global-search:hover,
.global-search:focus {
	color: #2196F3;
	text-decoration: none;
}

.navbar-toggler:focus,
.navbar-toggler:hover
{
	outline: none;
	color: #2196F3;
}

/* .navbar-toggler::before {
	display: inline;
	font-size: inherit;
	text-rendering: auto;
	-webkit-font-smoothing: antialiased;
	content: "\f0c9";
	font:20px/1 FontAwesome;
}

.navbar-toggler[aria-expanded='true']::before {
	content: "\f00d";
} */

.navbar-toggler::after {
	padding-left: 10px;
	content: "Menu"; 
}

.navbar-toggler[aria-expanded='true']::after {
	content: "Close";
}

.header,
.footer {
	padding-right: 1rem;
	padding-left: 1rem
}

.header {
	padding-bottom: 1rem;
	border-bottom: .05rem solid #e5e5e5
}

.header h3 {
	margin-top: 0;
	margin-bottom: 0;
	line-height: 3rem
}

@media (min-width:48em) {
	.container {
		max-width: 46rem
	}
}

.container-narrow>hr {
	margin: 2rem 0
}

.jumbotron {
	text-align: center;
	border-bottom: .05rem solid #e5e5e5;
	background-color: #373a3c;
	color: #ccc;
	margin-bottom: 0px;
	margin-top: -40px;
	padding-top: 6rem;
	padding-bottom: 6rem;
}

.jumbotron.post_featured_image {
	background: center center no-repeat #373a3c;
	background-size: cover;
}

.jumbotron .btn {
	padding: .75rem 1.5rem;
	font-size: 1.5rem
}

@media screen and (min-width:48em) {
	.header,
	.footer {
		padding-right: 0;
		padding-left: 0
	}
	.header {
		margin-bottom: 2rem
	}
	.jumbotron {
		border-bottom: 0
	}
}

.navbar-collapse .container-fluid {
	padding: 2rem 2.5rem;
	border-bottom: 1px solid #ccc;
}

.navbar-collapse h4 {
	color: #818a91
}

.navbar-collapse .text-muted {
	color: #818a91
}

.post {
	border-bottom: #ebf2f6 1px solid;
	padding-bottom: 2rem;
	padding-top: 2rem;
	word-break: break-word;
}

.post .post-meta {
	margin: 0 0 5px 0;
	font-family: 'Open Sans',sans-serif;
	font-size: 1.5 rem;
	color: #9eabb3;
}

.post .post-meta a {
	color: #9eabb3;
	text-decoration: none;
}

.post .post-tags {
	display: inline-block;
	float: right;
}

.post .post-tags a{
	color: #fff;
}

.post .post-title {
	margin: 0;
	font-size: 3rem;
	letter-spacing: -1px;
	line-height: 1.2em;
	text-indent: -2px;
	text-rendering: optimizeLegibility;
	font-family: 'Open Sans',sans-serif;
	/* font-family: "Lato","Helvetica Neue",Helvetica,sans-serif; */
	/* font-weight: 900; */
}

.post .post-title a {
	color: #297db1;
	transition: color 300ms ease-in-out;
	word-break: keep-all;
}

.post .post-title a:hover {
	color: #2196F3;
}

.post .post-excerpt p {
	line-height: 1.6em;
}

/*.posts .post_pagination {
	color: #9eabb3;
}
.posts .post_pagination a {
	color: #9eabb3;
	padding: 5px 10px 5px 10px;
	border: #ebf2f6 2px solid;
	text-decoration: none;
	border-radius: 30px;
	transition: border ease .3s;
}
.posts .post_pagination a:hover {
	color: #2196F3;
}*/

.jumbotron p.lead > a[data-discuss-identifier] {
	color: #ccc;
}

.share hr {
	border-top: #ebf2f6 1px solid;
}

.share h5 {
	color: #546673;
}

.share a {
	font-size: 20px;
	margin-right: 5px;
	color: #55595c !important;
}

.share a:hover{
	color: #2196F3 !important;
	text-decoration: none;
}

/*div[itemprop="articleBody"] a:not(.btn) {
	text-decoration: none;
	color: #2196F3;
}*/

.medium-zoom-image{
	width: 100%;
}

